--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   <h1>Meet Our Team</h1>
   <div id="team">
   </div>
+  <div class="member">
+  <h2>Ferdinand Baguyo</h2>
+  <p>Role: Team Lead</p>
+</div>
 </body>
 </html>
