Add profile section for Herielle

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <div class="member">
   <h2>Ferdinand Baguyo</h2>
   <p>Role: Team Lead</p>
+  <div class="member">
+  <h2>Herielle</h2>
+  <p>Role: Cute Member</p>
+</div>
 </div>
 </body>
 </html>
