Update profile for Herielle

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <div class="member">
   <h2>Ferdinand Baguyo</h2>
   <p>Role: Team Lead</p>
+  </div>
   <div class="member">
-  <h2>Herielle</h2>
+  <h2>Apple</h2>
   <p>Role: Cute Member</p>
 </div>
 </div>
